styles/style.css
/* ... */
.message__body {
  width: calc(100% - var(--sidemenu-width));
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  align-items: center;
  padding: 8px 0;
  z-index: 1;
  opacity: 0.7;
  margin-left: var(--sidemenu-width);
  animation-duration: 0.5s;
  -webkit-animation-duration: 0.5s;
}
.message__body.message__body_error {
  color: var(--color-error);
  background-color: var(--bg-color-error);
}
.message__body.message__body_info {
  color: var(--color-info);
  background-color: var(--bg-color-info);
}
.message__icon {
  flex: none;
  margin: 0 8px;
}
.message__text {
  flex: auto;
  text-align: left;
}
.message__x-btn {
  flex: none;
  margin-right: 8px;
  font-size: 1rem;
}

.zigzag-separator__jagged {
  position: relative;
}
.zigzag-separator__jagged:before {
  content: "";
  display: block;
  position: absolute;
  top: -10px;
  width: 100%;
  height: 10px;
}
.zigzag-separator__top {
  width: 100%;
  height: 20px;
  background-color: #eeeeee
}
.zigzag-separator__middle {
  width: 100%;
  height: 5px;
  background-color: #cccccc;
}
.zigzag-separator__middle:before {
  background: linear-gradient(45deg, transparent 33.333%, #cccccc 33.333%, #cccccc 66.667%, transparent 66.667%), linear-gradient(-45deg, transparent 33.333%, #cccccc 33.333%, #cccccc 66.667%, transparent 66.667%);
  background-size: 20px 40px;
}
.zigzag-separator__bottom {
  width: 100%;
  height: 10px;
  background: #eeeeee;
  border-bottom: solid 1px var(--color-timeline-border);
}
.zigzag-separator__bottom:before {
  background: linear-gradient(45deg, transparent 33.333%, #eeeeee 33.333%, #eeeeee 66.667%, transparent 66.667%), linear-gradient(-45deg, transparent 33.333%, #eeeeee 33.333%, #eeeeee 66.667%, transparent 66.667%);
  background-size: 20px 40px;
}

.tweet-form {
  flex: none;
  flex-direction: column;
  width: 100%;
  box-sizing: border-box;
  background-color: var(--bg-color-light);
  padding: 8px;
  display: flex;
  animation-duration: 0.5s;
  -webkit-animation-duration: 0.5s;
  box-sizing: border-box;
  border-bottom: solid 1px var(--color-timeline-border);
}
.tweet-form__editor {
  display: flex;
  align-items: center;
}
.tweet-form__input {
  width: 100%;
  max-width: 100%;
  flex: auto;
  border-radius: 4px;
  padding: 4px;
  position: relative;
  background-color: #f5f8fa;
  box-sizing: border-box;
  border: solid 1px var(--color-timeline-border);
}
.tweet-form__counter {
  position: absolute;
  right: 4px;
  bottom: 4px;
}
.tweet-form__counter.tweet-form__counter_normal {
  color: var(--color-weak-text-link);
}
.tweet-form__counter.tweet-form__counter_over {
  color: var(--color-error);
}
.tweet-form__decorated-SCREENNAME,
.tweet-form__decorated-HASHTAG {
  color: var(--text-link-color);
}
.tweet-form__cancel-btn {
  flex: none;
  color: var(--color-light-inactive);
  cursor: pointer;
  margin-right: 8px;
  font-size: 1em;
}
.tweet-form__send-btn {
  flex: none;
  color: white;
  border-radius: 4px;
  margin-left: 8px;
  padding: 4px 8px;
  border: solid 1px;
  box-sizing: border-box;
}
.tweet-form__send-btn.tweet-form__send-btn_active {
  background-color: var(--color-twitter);
  border-color: var(--color-twitter-weak);
  cursor: pointer;
}
.tweet-form__send-btn.tweet-form__send-btn_active:hover {
  opacity: 0.8;
}
.tweet-form__send-btn.tweet-form__send-btn_inactive {
  background-color: var(--color-weak-text-link);
  border-color: #aaaaaa;
}
.tweet-form__send-btn.tweet-form__send-btn_inactive:hover {
  opacity: 0.8;
}
.tweet-form__in-reply-to {
  display: flex;
  padding: 8px;
  margin-bottom: 8px;
  border-radius: 4px;
  background-color: #f5f8fa;
  box-sizing: border-box;
  border: solid 1px var(--color-timeline-border);
}

.autocomplete__suggestions {
  position: absolute;
  display: flex;
  flex-direction: column;
  background-color: white;
  border: solid 1px var(--color-timeline-border);
  border-radius: 4px;
  padding: 4px;
  font-size: 1rem;
  min-width: 10rem;
  z-index: 1;
}
.autocomplete__suggestion-item {
  display: flex;
  align-items: center;
  cursor: pointer;
  margin: 2px;
  padding: 2px;
  border-radius: 4px;
}
.autocomplete__suggestion-item:hover {
  background-color: #e0e0ee;
}
.autocomplete__suggestion-item.autocomplete__suggestion-item_focused {
  background-color: #e0e0ee;
}
.autocomplete__emoji-code {
  flex: none;
  min-width: 1.3rem;
  margin-right: 8px;
}
.autocomplete__emoji-text {
  flex: auto;
}
.autocomplete__screenname-icon {
  margin-right: 8px;
  width: 2rem;
  height: 2rem;
  border-radius: 0.4rem;
}

.user-popup {
  display: flex;
  flex-direction: column;
  width: 300px;
}
.user-popup__background {
  width: 100%;
  min-height: 50px;
  max-height: 100px;
  overflow: hidden;
}
.user-popup__background img {
  object-fit: cover;
  width: 100%;
  max-height: 100px;
}
.user-popup__primary {
  display: flex;
  padding: 0 8px;
  align-items: center;
}
.user-popup__main-icon {
  margin-top: -32px;
}
.user-popup__description {
  padding: 16px;
  word-wrap: break-word;
  word-break: break-all;
  white-space: pre-wrap;
}
.user-popup__name {
  margin-top: 4px;
  margin-left: 4px;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}
.user-popup__user-name {
  font-weight: bold;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}
.user-popup__screenname {
  color: var(--text-link-color);
}
.user-popup__counts {
  display: flex;
}
.user-popup__count {
  flex: auto;
  margin: 0 4px;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.user-popup__count-name {
  color: var(--color-weak-text-link);
}
.user-popup__count-value {
  display: block;
  font-weight: bold;
  font-size: 1rem;
}
.user-popup__website,
.user-popup__location {
  display: flex;
  align-items: center;
}
.user-popup__footer {
  padding: 0 16px 8px;
}

.follow-button {
  color: white;
  padding: 4px;
  border-radius: 0.2em;
  box-sizing: border-box;
  margin-left: 4px;
  border: solid 1px;
  cursor: pointer;
}
/* ... */

